src/objects/App_Processing_Variables__c.object
<CustomObject>
    <description>Object holds variables used to compute calculations (e.g., Low and High Income, Low and High Credit Scores, MAFD, etc.)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the variables are active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commitment_Calendar_day_value__c</fullName>
        <defaultValue>21</defaultValue>
        <label>Commitment Calendar day value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>100000</defaultValue>
        <description>Standard Exclusion used to calculate the Asset Test for an Application</description>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>High_Credit_Score__c</fullName>
        <description>Indicates threshold for what&apos;s considered a High Credit Score</description>
        <label>High Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Income__c</fullName>
        <description>Threshold for what&apos;s considered a High Income</description>
        <label>High Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>High_MAFD__c</fullName>
        <label>High MAFD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Credit_Score__c</fullName>
        <description>Indicates the SBA&apos;s threshold for a Low Credit Score</description>
        <label>Low Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Income__c</fullName>
        <description>Threshold for what&apos;s considered a Low Income</description>
        <label>Low Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_MAFD__c</fullName>
        <label>Low MAFD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mid_MAFD__c</fullName>
        <label>Mid MAFD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Exclusion__c</fullName>
        <defaultValue>100000</defaultValue>
        <label>Standard Exclusion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>App Processing Variables</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{MM} {DD} {YYYY} #{0}</displayFormat>
        <label>App Variables</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Processing Variables</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>